# etched-peakrdl

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/: api.rst
src/etched_peakrdl_cheader/: design_state.py  directive_injector.py  exporter.py  unique_rebuild_directive_injector.py
src/etched_peakrdl_cheader/templates/: BUILD_TEMPLATE  rw_readwrite_test.c  rw_test_lib_header.h  rw_test_registers_header.c
src/peakrdl_cheader/: csr_access_generator.py  directive_injector.py  exporter.py  header_generator.py  nodename_retriever.py  perf_counter_generator.py  perfcount_exporter.py  testcase_generator.py  utils.py  visualizer_generator.py
src/peakrdl_cheader/templates/: BUILD_TEMPLATE  rw_readwrite_test.c  rw_test_registers_header.c
tests/: .coveragerc  base.py  run.sh
