[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "etched-peakrdl-cheader"
dynamic = ["version"]
requires-python = ">=3.6"
dependencies = [
    "systemrdl-compiler @ https://github.com/etched-ai/etched-systemrdl-compiler/archive/ab83f8465ab05617a5f79bc035e783006cecb048.zip",
    "jinja2",
    "pyyaml",
    "treelib",
]

authors = [
    {name="cyrus-etched"},
]
description = "Generate C Header files from a SystemRDL register model"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "C", "header", "software",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Source = "https://github.com/SystemRDL/PeakRDL-cheader"
Tracker = "https://github.com/SystemRDL/PeakRDL-cheader/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL-cheader/releases"
Documentation = "https://peakrdl-cheader.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "etched_peakrdl_cheader.__about__.__version__"}

[project.entry-points."peakrdl.exporters"]
c-header = "etched_peakrdl_cheader.__peakrdl__:Exporter"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"etched_peakrdl_cheader" = ["templates/*"]
